# securepass

./: .env.sample  .gitignore  .railwayignore  CLAUDE.md  deploy.md  docker-compose.yml  nixpacks.toml  package.json  railway.toml  securepass-design-doc.md  securepass-mvp-structure.md  securepass-spec.md
.claude/: settings.local.json
.github/: README.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway-worker.toml  railway.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  download.py  files.py  requests.py  shares.py  stats.py  subscription.py  users.py
backend/app/background/: scheduler.py  tasks.py  worker.py  worker_with_scheduler.py
backend/app/core/: auth.py  config.py  database.py  security.py  storage.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  file.py  request.py  stats.py  subscription.py
backend/app/services/: dashboard.py  plan_limit_service.py  stats.py  stripe_service.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20250805112607_init/: migration.sql
backend/prisma/migrations/20250806102617_add_user_model/: migration.sql
backend/prisma/migrations/20250807152554_add_decrypt_key_access_flags/: migration.sql
backend/prisma/migrations/20250807154221_remove_decrypt_key_access_flags/: migration.sql
backend/prisma/migrations/20250807161817_add_is_invalidated_to_file/: migration.sql
backend/prisma/migrations/20250808011040_add_subscription_tables/: migration.sql
backend/prisma/migrations/20250808061017_rename_invalidated_to_blocks_and_add_blocks_downloads/: migration.sql
backend/scripts/: create_initial_plans.py  upsert_initial_plans.py
frontend/: Dockerfile  README.md  middleware.ts  next.config.js  package.json  railway.toml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Auth0Header.tsx  Auth0Modal.tsx  BlockDownloadsButton.tsx  BlockRequestsButton.tsx  ConfirmModal.tsx  Features.tsx  FileUploader.tsx  InvalidateFileButton.tsx  ProgressBar.tsx  (+3 more)
(+16 files in other folders)
